Use virtual Threads for receivers, and to use this more efficiently update clients in a parallel stream